--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -16,32 +16,34 @@
         android:indeterminateTint="@android:color/holo_blue_light"
         android:indeterminateTintMode="src_atop"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@+id/cardView"
-        app:layout_constraintEnd_toEndOf="@+id/cardView"
-        app:layout_constraintStart_toStartOf="@+id/cardView"
-        app:layout_constraintTop_toTopOf="@+id/cardView" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
+    <TextView
         android:id="@+id/image_success"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        app:layout_constraintBottom_toBottomOf="@+id/cardView"
-        app:layout_constraintEnd_toEndOf="@+id/cardView"
-        android:elevation="25dp"
-        android:visibility="invisible"
-        app:layout_constraintStart_toStartOf="@+id/cardView"
-        app:layout_constraintTop_toTopOf="@+id/cardView"
-        tools:srcCompat="@drawable/success" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/success"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="15dp"
         android:backgroundTint="@color/white"
         app:cardCornerRadius="10dp"
-        android:layout_marginHorizontal="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
 
         <LinearLayout
             android:id="@+id/ll_centered"
@@ -54,14 +56,14 @@
                 android:id="@+id/tv_error"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:textColor="@android:color/holo_red_light"
-                tools:text="Wrong login or password, try again."
-                android:gravity="center"
-                android:visibility="invisible"
-                android:textStyle="bold"
-                android:textSize="15sp"
                 android:layout_marginHorizontal="15dp"
-                android:layout_marginVertical="8dp" />
+                android:layout_marginVertical="8dp"
+                android:gravity="center"
+                android:textColor="@android:color/holo_red_light"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                android:visibility="invisible"
+                tools:text="Wrong login or password, try again." />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/til_login"
